# DirectX12-Renderer

./: CMakeLists.txt  DirectX12.slnx  LICENSE  NOTICES  README.md
AtlasPacker/: AtlasPacker.cpp  AtlasPacker.vcxproj
DirectX12/: DirectX12.vcxproj  DirectX12.vcxproj.filters  Font.cpp  Helpers.h  Mesh.h  PixelShader.hlsl  Renderer.cpp  Renderer.h  ResourceManager.cpp  Shaders.hlsl  Window.cpp  main.cpp  packages.config
DirectX12/fonts/: OFL.txt
DirectX12/include/: AtlasAnimation.h  Camera2D.h  Colors.h  Font.h  GridSpriteAnimation.h  GridSpriteSheet.h  Helpers.h  InputManager.h  Mesh.h  Renderer.h  Renderer2D.h  RendererCore.h  ResourceManager.h  SpriteAnimation.h  Vertex.h  Window.h
DirectX12/include/imgui/: LICENSE
DirectX12/src/: BuildDispatchArgs.hlsl  CompactParticles.hlsl  Font.cpp  GridOutlinePS.hlsl  InputManager.cpp  ParticleCommon.hlsli  ParticlePS.hlsl  ParticleVS.hlsl  PixelShader.hlsl  Renderer.cpp  Renderer2D.cpp  RendererCore.cpp  ResetAliveCounter.hlsl  ResourceManager.cpp  SpawnParticles.hlsl  UpdateParticles.hlsl  VertexShader.hlsl  WaveParticles.hlsl  Window.cpp  main.cpp
x64/Debug/: VertexShader.cso
x64/Release/: PixelShader.cso
